--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Content for my devops days Porto Alegre 2016 presentation",
   "main": "index.js",
   "scripts": {
+    "start": "./node_modules/.bin/reveal-md index.md",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -15,5 +16,8 @@
     "monitoring"
   ],
   "author": "Diogo Lucas (diogo.lucas@gmail.com)",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "reveal-md": "0.0.29"
+  }
 }
